tests/NormalTests/paczka1/fuzzy1/56555781.err
Error in line 18: AaCRDYi A722 3,5
Error in line 20: hHg32WQzYU S419 23,1
Error in line 34: AaCRDYi S419 41,8
